Fixed centering offsets on mobile.

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ h1 {
     font-size: 3.5rem;
     font-weight: bolder;
     margin-bottom: 0;
+    text-align: center;
 }
 
 .subtitle {
@@ -100,11 +101,17 @@ h1 {
     margin-bottom: 30px;
     margin-left: 3rem;
     margin-right: 3rem;
+    word-wrap: break-word;
 }
 
-.use-desc {
-    margin: 0;
+.use-desc { 
+    margin-top: 10px;
     margin-bottom: 30px;
+}
+
+.use-table {
+   width: 100%;
+   text-align: center;
 }
 
 .end {
@@ -122,7 +129,7 @@ p {
 
 .use1 {
     background: #fff;
-    clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 96%, 0% 100%);
 }
 
 .faceprint {
@@ -143,8 +150,10 @@ p {
 
 .use-item {
     display: inline-block;
-    margin: 30px;
+    margin: auto;
     vertical-align: top;
+    position: relative;
+    padding: 20px;
 }
 
 .responsive {
@@ -159,7 +168,7 @@ p {
 
 .harm {
     background: #fff;
-    clip-path: polygon(0 4%, 100% 0, 100% 95%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 98%, 0% 100%);
 }
 
 .solutions p{
@@ -168,7 +177,7 @@ p {
 
 .survey {
     background: #fff;
-    clip-path: polygon(0 12%, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 93%, 0% 100%);
 }
 
 .sources p{
@@ -243,8 +252,9 @@ p {
         margin-right: 0;
     }
 
-    .use-item {
-        display: block;
+    .use-item .description {
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 
     .cam1 {
